--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                         <div class="layers_caption">Welcome to Parallax</div>
                         <div class="layers_title">Fairy Forest</div>
                     </div>
-                    <div class="layer layers_base" style='background-image: url(../img/layer-base.png);'></div>
-                    <div class="layer layers_middle" style='background-image: url(../img/layer-middle.png);'></div>
+                    <div class="layer layers_base" style='background-image: url(img/layer-base.jpg);'></div>
+                    <div class="layer layers_middle" style='background-image: url(img/layer-middle1.png);'></div>
                     <div class="layer layers_front" style='background-image: url(img/layer-front.png);'></div>
                 </div>
             </header>
